[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["alexdekunov <wresda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
telebot = "^0.0.5"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
